<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_settings_root_padding">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/settings_intro_title"
        android:textColor="@color/hero_ink"
        android:textSize="@dimen/fragment_settings_title_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_settings_card_margin_top"
        app:cardBackgroundColor="@color/parchment_light"
        app:cardCornerRadius="@dimen/fragment_settings_card_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsTitle"
        app:strokeColor="@color/parchment_stroke"
        app:strokeWidth="@dimen/fragment_settings_card_stroke_width">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fragment_settings_card_content_padding">

            <TextView
                android:id="@+id/settingsLanguageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/settings_language_title"
                android:textColor="@color/hero_ink"
                android:textSize="@dimen/fragment_settings_language_title_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="@dimen/match_constraints"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_settings_language_body_margin_top"
                android:lineSpacingExtra="@dimen/fragment_settings_language_body_line_spacing_extra"
                android:text="@string/settings_language_body"
                android:textColor="@color/hero_muted"
                android:textSize="@dimen/fragment_settings_language_body_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settingsLanguageTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
